force-app/main/default/objects/CLQ_Standard_Document__c/CLQ_Standard_Document__c.object-meta.xml
<CustomObject>
    <label>Standard Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>