force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Document_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Document_Affiliation__c</fullName>
    <description>Affiliation to choose either Program or Organization related to the document</description>
    <label>Document Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>