force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Document_Points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Document_Points__c</fullName>
    <label>Document Points</label>
    <length>5</length>
    <type>Text</type>
</CustomField>