force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Document_Rating__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Document_Rating__c</fullName>
    <label>Document Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>