force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_CurrentVersionFlag__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_CurrentVersionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator set for current document version</description>
    <label>Current Document</label>
    <type>Checkbox</type>
</CustomField>