force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Doc_MIMEType__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Doc_MIMEType__c</fullName>
    <description>field to store MIME Type \file type of the document uploaded</description>
    <label>MIME Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>