force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_DocGlobal_URL__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_DocGlobal_URL__c</fullName>
    <description>Field to store OnBASE document global URL</description>
    <label>Document Global URL</label>
    <type>TextArea</type>
</CustomField>