force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_DocHandle__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_DocHandle__c</fullName>
    <description>field to store ONBASE doc handle returned from ONBASE</description>
    <label>OnBase Document Handle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>