force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Link__c</fullName>
    <description>Field to display document onclick , redirecting to ONBASE URL</description>
    <formula>&apos;&lt;a href=&quot;/apex/Integration_ONBASE_OpenDoc?refId=&apos;+Id+&apos;&quot; target=&quot;_blank&quot;&gt; &lt;img src=&quot;/img/icon/documents16.png&quot;&gt; View Document&lt;/a&gt;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Link</label>
    <type>Text</type>
</CustomField>