force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Document_Size__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Size__c</fullName>
    <description>Field to store size of the document uploaded</description>
    <label>Document Size</label>
    <length>200</length>
    <type>Text</type>
</CustomField>