force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Type__c</fullName>
    <description>field to display document type that has to be sent to ONBASE</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_OnBase_Document_Types</valueSetName>
    </valueSet>
</CustomField>