force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Document_Version_No__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Version_No__c</fullName>
    <defaultValue>1</defaultValue>
    <description>field to store the version number of the document uploaded\cloned</description>
    <label>Document Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>