force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_File_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_File_Name__c</fullName>
    <description>field to store the name of the file that is uploaded</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>