force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Parent_Document__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Parent_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>field to store the immediate parent document</description>
    <label>Version Immediate Parent Document</label>
    <referenceTo>CLQ_Standard_Document__c</referenceTo>
    <relationshipLabel>Standard Documents</relationshipLabel>
    <relationshipName>Integration_Parent_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>