force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Integration_Version_1_Parent__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Version_1_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Id of the master document transaction record against which the very first integration document version is created.</description>
    <label>Version One Parent Document</label>
    <referenceTo>CLQ_Standard_Document__c</referenceTo>
    <relationshipLabel>Standard Documents (Version One Parent Document)</relationshipLabel>
    <relationshipName>Integration_Version_1_Parent_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>