force-app/main/default/objects/CLQ_Standard_Document__c/fields/CLQ_Organization__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>